k8s/Backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  # namespace: wandarlust-namespace
  labels:
    app: wandarlust-backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  selector:
    app: wandarlust-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  # namespace: wandarlust-namespace
  labels:
    app: wandarlust-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wandarlust-backend
  template:
    metadata:
      labels:
        app: wandarlust-backend
    spec:
      imagePullSecrets:
      - name: my-docker-key
      containers:
        - name: wandarlust-backend
          image: atiyaali/wanderlust-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
