k8s/Redisconfig.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  # namespace: redis-namespace
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
  selector:
    app: redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  # namespace: redis-namespace
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:alpine
          # command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      #     volumeMounts:
      #       - name: redis-config-volume
      #         mountPath: /usr/local/etc/redis/
      #       - name: redis-data
      #         mountPath: /data
      # volumes:
      #   - name: redis-config-volume
      #     configMap:
      #       name: redis-config
      #   - name: redis-data
      #     emptyDir: {}
