k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  # namespace: wandarlust-namespace
  labels:
    app: wandarlust-frontend
spec:
  type: ClusterIP
  ports:
    - port: 5173
      targetPort: 5173
      name: http
  selector:
    app: wandarlust-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  # namespace: wandarlust-namespace
  labels:
    app: wandarlust-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wandarlust-frontend
  template:
    metadata:
      labels:
        app: wandarlust-frontend
    spec:
      imagePullSecrets:
      - name: my-docker-key
      containers:
        - name: wandarlust-frontend
          image: atiyaali/wanderlust-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
